# yakety

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Info.plist  README.md  analysis.md  build-windows.sh  build.bat  build.sh  clean.bat  clean.sh  deep-clean.sh  flow-architecture.md  generate-icons-windows.sh  generate-icons.sh  grant_microphone.sh  ideas.md  nul  permissions.sh  run.sh  setup-linux.sh  setup-macos.sh  setup-windows.ps1  sign-app.sh  task.md
.claude/commands/: update-docs.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-release.yml
.github/workspaces/: build-release.yml
assets/: yakety.icns
build-static/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  recorder.vcxproj  recorder.vcxproj.filters  test_transcription.vcxproj  test_transcription.vcxproj.filters  yakety-app.vcxproj  yakety-app.vcxproj.filters  yakety.sln  yakety.vcxproj  yakety.vcxproj.filters
build-static/recorder.dir/Release/: recorder.exe.recipe
build-static/recorder.dir/Release/recorder.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-static/test_transcription.dir/Release/: test_transcription.exe.recipe
build-static/test_transcription.dir/Release/test_tra.81744CA6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_transcription.lastbuildstate
build-static/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-static/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-static/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-static/yakety-app.dir/Release/: yakety-app.exe.recipe
build-static/yakety-app.dir/Release/yakety-app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-static/yakety.dir/Release/: yakety.exe.recipe
build-static/yakety.dir/Release/yakety.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cmake/: BuildWhisper.cmake  PlatformSetup.cmake  toolchain-mingw64.cmake
docs/: architecture.md  build-system.md  deployment.md  development.md  dialog-refactor.md  files.md  project-overview.md  testing.md
src/: app.h  audio.c  audio.h  audio_permission.h  config.c  dialog.h  http.h  keylogger.c  keylogger.h  logging.h  main.c  main.m  main_app.m  menu.c  menu.h  menubar.m  model_definitions.h  models.c  models.h  overlay.h  platform.h  preferences.c  preferences.h  recorder.c  test_transcription.c  transcribe.c  transcription.cpp  transcription.h  utils.h  yakety_core.c  yakety_core.h
src/mac/: Info.plist  app.m  audio_permission.m  clipboard.m  dialog.m  dispatch.h  dispatch.m  http.m  keylogger.c  logging.m  main.m  main_app.m  menu.m  menubar.m  overlay.m  permissions.h  permissions.m  platform_mac.m  utils.m  yakety.entitlements
src/mac/dialogs/: dialog_common.h  dialog_common.m  dialog_utils.swift  download_dialog.h  download_dialog.m  download_dialog.swift  hotkey_dialog.h  hotkey_dialog.m  hotkey_dialog.swift  models_dialog.h  models_dialog.m  models_dialog.swift
src/tests/: test_download_dialog.c  test_keycombination_dialog.c  test_winui3_hello.cpp
src/windows/: app.c  clipboard.c  dialog.c  dialog_keycapture.c  keylogger.c  logging.c  main.c  main_app.c  menu.c  menubar.c  overlay.c  overlay.h  platform_windows.c  utils.c  yakety.rc
src/windows/dialogs/: dialog_components.c  dialog_download.c
todos/: project-description.md  todos.md
todos/done/: 2025-01-22-09-21-10-implement-vad-analysis.md  2025-01-22-09-21-10-implement-vad.md  2025-07-15-18-28-42-additional-key-cancellation-analysis.md  2025-07-15-18-28-42-additional-key-cancellation.md
todos/work/2025-01-28-15-45-00-unified-macos-permissions/: analysis.md  task.md
todos/worktrees/2025-07-18-17-47-13-overlay-visibility-issue/: task.md
wsl/: REMOTE_DEVELOPMENT.md  WSL_SSH_GUIDE.md  setup-wsl-ssh.sh  start-wsl-ssh.bat  wsl-development.md
